--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 	
 	<div id="abc">
 		<div class="container">
-			<p>So we'll see you there and remember,we arent taking no for an answer</p>
+			<div class="col-lg-6">
+				<p>So we'll see you there and remember,we arent taking no for an answer</p>
+			</div>		
 		</div>
 	</div>
 	
