--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
 		<br>
 	</div><!--/.container -->
 	
+	<div id="efg">
+		<div class="container">
+			<div class="row">
+				
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>When</h5>
+				</div>
+				<div class="col-lg-6">
+					<p>Saturday,the 26th of September,2015,Mark it on your calenders ;)</p>
+				</div>
+	
 	<div id="abc">
 		<div class="container">
 			<p>So we'll see you there and remember,we arent taking no for an answer</p>		
