--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 				<div class="col-lg-6">
 					<p>Saturday,the 26th of September,2015,Mark it on your calenders ;)</p>
 				</div>
-
+			</div>
+		</div>
+	</div>
+	
 	<!--AWARDS DESCRIPTION -->
 	<div class="container desc">
 		<div class="row">
@@ -115,7 +118,7 @@
 					<p><t>Prateek</t><br/>
 						+91 9650706485
 					</p>
-					
+					</div>
 		
 		</div><!--/.row -->
 		<br>
