--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<h5>Where</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Sylvan Chef Farms & Banquets</t><br/>
+					<p><t>Sylvan Chef Farms & Banquets</t><br>
 						1768/1, Central School Road, Vasant Kunj, Delhi - 110070, Behind Indian Spinal Injuries Hospital <br/>
 					</p>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.2613567914673!2d77.14062099999998!3d28.531862999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1dd455555555%3A0xaae4ad3c75eaae9f!2sSylvan+Chef!5e0!3m2!1sen!2sin!4v1439748864511" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
