--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<h5>When</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>Saturday,the 26th of September,2015,Mark it on your calenders ;)</p>
+					<p>Saturday,the 26th of September,2015,7:30pm.Mark it on your calenders ;)</p>
 				</div>
 			</div>
 		</div>
@@ -125,7 +125,7 @@
 	
 	<div id="abc">
 		<div class="container">
-			<p>So we'll see you there and remember,we arent taking no for an answer</p>		
+			<p>So we'll see you there and remember,we aren't taking no for an answer</p>		
 		</div>
 	</div>
 	
