--- a/index.html
+++ b/index.html
@@ -107,13 +107,19 @@
 						+91 9999614710 <br/>
 					</p>
 				</div>
+				<div class="col-lg-3">
+					<img style="height=100px;width:100px;border-radius:50%" src="../img/IMG_20150424_2144471.jpg"/>
+				</div>
 				
 	
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Prateek</t><br/>
 						+91 9650706485
 					</p>
-					</div>
+				</div>
+				<div class="col-lg-3">
+					<img style="height=100px;width:100px;border-radius:50%" src="../img/IMG_20150425_235337.jpg"/>
+				</div>
 		
 		</div><!--/.row -->
 		<br>
