Added photos for RSVP

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<img style="height=100px;width:100px;border-radius:50%" src="https://github.com/prateekmaini/prateekmaini.github.io/blob/master/assets/img/IMG_20150424_214447.jpg"/>
+					<img style="height=100px;width:100px;border-radius:50%" src="../img/IMG_20150424_214447.jpg"/>
 				</div>
 				
 	
@@ -118,7 +118,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<img style="height=100px;width:100px;border-radius:50%" src="https://github.com/prateekmaini/prateekmaini.github.io/blob/master/assets/img/IMG_20150425_235337.jpg"/>
+					<img style="height=100px;width:100px;border-radius:50%" src="../img/IMG_20150425_235337.jpg"/>
 				</div>
 		
 		</div><!--/.row -->
