--- a/index.html
+++ b/index.html
@@ -112,17 +112,16 @@
 				</div>
 				
 	
-				<div class="col-lg-6 col-lg-offset-3">
+				<div class="col-lg-6">
 					<p><t>Prateek</t><br/>
-						+91 9650706485
+						+91 9650706485<br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<img style="height=100px;width:100px;border-radius:50%" src="https://github.com/prateekmaini/prateekmaini.github.io/blob/master/assets/img/IMG_20150425_235337.jpg?raw=truea/>
+					<img style="height=100px;width:100px;border-radius:50%" src="https://github.com/prateekmaini/prateekmaini.github.io/blob/master/assets/img/IMG_20150425_235337.jpg?raw=true"/>
 				</div>
 		
 		</div><!--/.row -->
-		<br>
 	</div><!--/.container -->
 	
 	
