--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 				
 	
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Prateek</t><br/>
 						+91 9650706485<br/>
 					</p>
