--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<h5>Flashback</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>Twenty five years ago,on the 30th of September,1990,our beloved parents,Rosy and Jagmohan began their beautiful journey of matrimony,and its their love and affection that has made the journey worthwhile.</p>
+					<p>Twenty five years ago,on the 30th of September,1990,our beloved parents,Rosy and Jagmohan began their beautiful journey of matrimony,and its their love and affection that has made the journey worthwhile.So,join us in celebrating this occasion.</p>
 				</div>
 				
 				
@@ -72,10 +72,10 @@
 	<div class="container desc">
 		<div class="row">
 			<div class="col-lg-2 col-lg-offset-1">
-				<h5>When</h5>
+				<h5>On</h5>
 			</div>
 			<div class="col-lg-6">
-				<p>Saturday,the 26th of September,2015,7:30pm.Block your calenders ;)</p>
+				<p>Saturday,the 26th of September,2015,7:30pm.<br/>Block your calenders ;)</p>
 			</div>
 		</div><!--/.row -->
 	</div><!--/.container -->
@@ -84,7 +84,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>Where</h5>
+					<h5>At</h5>
 				</div>
 				<div class="col-lg-6">
 					<p><t>Sylvan Chef Farms & Banquets</t><br>
